Migrate to IntelliJ Platform Gradle Plugin 2 (#2194)
Closes https://github.com/sourcegraph/cody-issues/issues/240
Fixes
https://linear.app/sourcegraph/issue/CODY-3713/upgrade-to-intellij-gradle-2x-plugin-to-debug-in-splitmode

## Test plan
1. Full QA
2. Green CI
3. runIde (and other gradle tasks) working

---------

Co-authored-by: Piotr Kukielka <pkukielka@virtuslab.com>